<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>tw.kewang</groupId>
    <artifactId>logback-http-appender</artifactId>
    <version>0.2.0-apica-3</version>
    <packaging>jar</packaging>

    <name>logback-http-appender</name>
    <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.1</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.5</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20210307</version>
        </dependency>
    </dependencies>

    <distributionManagement>
      <repository>
        <id>apica-artifacts</id>
        <name>a0pbpgwdghsu9-artifactory-primary-0-releases</name>
        <url>https://apica.jfrog.io/artifactory/backend-services-releases</url>
      </repository>
      <snapshotRepository>
        <id>snapshots</id>
        <name>a0pbpgwdghsu9-artifactory-primary-0-snapshots</name>
        <url>https://apica.jfrog.io/artifactory/backend-services-snapshots</url>
      </snapshotRepository>
    </distributionManagement>

    <repositories>
      <repository>
        <id>backend-services-releases</id>
        <url>https://apica.jfrog.io/artifactory/backend-services-releases/</url>
      </repository>
    </repositories>
    
    <build>
	    <plugins>
	      <plugin>
	        <groupId>org.apache.maven.plugins</groupId>
	        <artifactId>maven-compiler-plugin</artifactId>
	        <version>3.6.1</version>
	        <configuration>
	          <source>1.8</source>
	          <target>1.8</target>
	        </configuration>
	      </plugin>
	    </plugins>
    </build>
</project>
